--- a/Vibe Code Faucets/package.json
+++ b/Vibe Code Faucets/package.json
@@ -14,6 +14,7 @@
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "lucide-react": "^0.294.0",
+    "posthog-js": "^1.342.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
